--- a/Utilities/otb6S/CMakeLists.txt
+++ b/Utilities/otb6S/CMakeLists.txt
@@ -121,23 +121,28 @@ IF(CMAKE_COMPILER_IS_GNUCC)
 #  ENDIF(WIN32)
 ENDIF(CMAKE_COMPILER_IS_GNUCC)
 
-FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
-
-INSTALL(FILES ${__files1}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otb6S
-    COMPONENT Development)
-
 IF(NOT OTB_DISABLE_UTILITIES_COMPILATION)
 ADD_LIBRARY(otb6S ${LIBF2C_SRCS} ${OTB6S_SRCS} ${OTB6S_MAIN_SRCS})
-
 IF(UNIX)
     TARGET_LINK_LIBRARIES (otb6S m)
 ENDIF(UNIX)
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(otb6S PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
-INSTALL(TARGETS otb6S
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS otb6S
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
+
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+  INSTALL(FILES ${__files1}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otb6S
+    COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
 
 ENDIF(NOT OTB_DISABLE_UTILITIES_COMPILATION)
 
