--- a/Utilities/otbsiftfast/CMakeLists.txt
+++ b/Utilities/otbsiftfast/CMakeLists.txt
@@ -151,12 +151,19 @@ if( NOT DEFINED USE_OPENMP OR USE_OPENMP  )
 endif()
 
 #Instal TARGET & FILES for otb-lib
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(otbsiftfast PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
-INSTALL(TARGETS otbsiftfast
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS otbsiftfast
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-INSTALL(FILES siftfast.h 
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otbsiftfast
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  INSTALL(FILES siftfast.h 
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otbsiftfast
     COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
