--- a/Code/Fusion/CMakeLists.txt
+++ b/Code/Fusion/CMakeLists.txt
@@ -4,15 +4,22 @@ FILE(GLOB OTBFusion_SRCS "*.cxx" )
 
 ADD_LIBRARY(OTBFusion ${OTBFusion_SRCS})
 TARGET_LINK_LIBRARIES (OTBFusion OTBCommon)
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(OTBFusion PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
-INSTALL(TARGETS OTBFusion
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS OTBFusion
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
-FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
-
-INSTALL(FILES ${__files1} ${__files2}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Fusion
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+  FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
+  INSTALL(FILES ${__files1} ${__files2}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Fusion
     COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+
