--- a/Code/Projections/CMakeLists.txt
+++ b/Code/Projections/CMakeLists.txt
@@ -6,21 +6,25 @@ TARGET_LINK_LIBRARIES(OTBProjections OTBIO)
 IF( OTB_USE_CURL )
     TARGET_LINK_LIBRARIES (OTBProjections ${CURL_LIBRARY})
 ENDIF( OTB_USE_CURL )
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(OTBProjections PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
-INSTALL(TARGETS OTBProjections
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS OTBProjections
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
-FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
-
-IF( NOT OTB_USE_CURL )
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  FILE(GLOB __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+  FILE(GLOB __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
+  IF( NOT OTB_USE_CURL )
     LIST(REMOVE_ITEM __files1 "${CMAKE_CURRENT_SOURCE_DIR}/otbPlaceNameToLonLat.h" )
     LIST(REMOVE_ITEM __files2 "${CMAKE_CURRENT_SOURCE_DIR}/otbPlaceNameToLonLat.txx" )
-ENDIF( NOT OTB_USE_CURL )
-
-INSTALL(FILES ${__files1} ${__files2}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Projections
+  ENDIF( NOT OTB_USE_CURL )
+  INSTALL(FILES ${__files1} ${__files2}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Projections
     COMPONENT Development)
-
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
