--- a/Utilities/BGL/boost/CMakeLists.txt
+++ b/Utilities/BGL/boost/CMakeLists.txt
@@ -1,7 +1,9 @@
-FILE(GLOB_RECURSE __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
-FILE(GLOB_RECURSE __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
-FILE(GLOB_RECURSE __files3 "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
 
-INSTALL(FILES ${__files1} ${__files2} ${__files3}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/BGL/boost
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  FILE(GLOB_RECURSE __files1 "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+  FILE(GLOB_RECURSE __files2 "${CMAKE_CURRENT_SOURCE_DIR}/*.txx")
+  FILE(GLOB_RECURSE __files3 "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
+  INSTALL(FILES ${__files1} ${__files2} ${__files3}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/BGL/boost
     COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
