--- a/Utilities/otbedison/CMakeLists.txt
+++ b/Utilities/otbedison/CMakeLists.txt
@@ -47,13 +47,19 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 
 ADD_LIBRARY(otbedison ${EDISON_SOURCE})
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(otbedison PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
-INSTALL(TARGETS otbedison
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS otbedison
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-INSTALL(FILES ${EDISON_HEADERS}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otbedison
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  INSTALL(FILES ${EDISON_HEADERS}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otbedison
     COMPONENT Development)
-
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
