--- a/Utilities/otbexpat/CMakeLists.txt
+++ b/Utilities/otbexpat/CMakeLists.txt
@@ -65,24 +65,26 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_expat_config.h.in
 
 ADD_LIBRARY(otbexpat ${EXPAT_SRCS} )
 #TARGET_LINK_LIBRARIES (otbkml)
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(otbexpat PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS otbexpat
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-INSTALL(TARGETS otbexpat
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
-
-SET(__files     ${CMAKE_CURRENT_SOURCE_DIR}/otb_expat.h
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  SET(__files     ${CMAKE_CURRENT_SOURCE_DIR}/otb_expat.h
                 ${CMAKE_CURRENT_SOURCE_DIR}/otb_expat_mangle.h)
-
-INSTALL(FILES ${__files}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otbexpat
+  INSTALL(FILES ${__files}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otbexpat
     COMPONENT Development)
-
-SET(__files2    ${CMAKE_CURRENT_SOURCE_DIR}/lib/expat_external.h 
+  SET(__files2    ${CMAKE_CURRENT_SOURCE_DIR}/lib/expat_external.h 
                 ${CMAKE_CURRENT_SOURCE_DIR}/lib/expat.h)
-
-INSTALL(FILES ${__files2}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otbexpat/lib
+  INSTALL(FILES ${__files2}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otbexpat/lib
     COMPONENT Development)
-
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
