--- a/Utilities/otbgalib/CMakeLists.txt
+++ b/Utilities/otbgalib/CMakeLists.txt
@@ -27,16 +27,20 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 ADD_LIBRARY(otbgalib ${GALIB_SRCS})
 TARGET_LINK_LIBRARIES (otbgalib)
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(otbgalib PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS otbgalib
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-INSTALL(TARGETS otbgalib
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
-
-FILE(GLOB __files "${CMAKE_CURRENT_SOURCE_DIR}/ga/*.h")
-
-INSTALL(FILES ${__files} 
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otbgalib/ga
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  FILE(GLOB __files "${CMAKE_CURRENT_SOURCE_DIR}/ga/*.h")
+  INSTALL(FILES ${__files}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otbgalib/ga
     COMPONENT Development)
-
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
