--- a/Utilities/otbopenthreads/OpenThreads/src/OpenThreads/win32/CMakeLists.txt
+++ b/Utilities/otbopenthreads/OpenThreads/src/OpenThreads/win32/CMakeLists.txt
@@ -33,26 +33,18 @@ LINK_DIRECTORIES(
 	${CMAKE_CURRENT_BINARY_DIR}
 )
 
-# OTB Modifications
-#INSTALL(
-#        TARGETS OpenThreads
-#        ARCHIVE DESTINATION lib
-#        LIBRARY DESTINATION lib
-#        RUNTIME DESTINATION bin
-#)
-INSTALL(TARGETS OpenThreads
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS ${LIB_NAME}
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-
-#INSTALL(
-#       FILES ${OpenThreads_PUBLIC_HEADERS}
-#       DESTINATION include/OpenThreads
-#)
-INSTALL(FILES ${OpenThreads_PUBLIC_HEADERS}
-              DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otbopenthreads/OpenThreads/include
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  INSTALL(FILES ${OpenThreads_PUBLIC_HEADERS}
+              DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otbopenthreads/OpenThreads/include
               COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
 
 
 #commented out# INCLUDE(ModuleInstall OPTIONAL)
