--- a/Utilities/otbsvm/CMakeLists.txt
+++ b/Utilities/otbsvm/CMakeLists.txt
@@ -29,17 +29,21 @@ ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 ADD_LIBRARY(otbsvm ${OTBSVM_SRCS})
 TARGET_LINK_LIBRARIES (otbsvm ITKCommon)
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(otbsvm PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS otbsvm
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-INSTALL(TARGETS otbsvm
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
-
-
-FILE(GLOB __files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
-
-INSTALL(FILES ${__files}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/otbsvm 
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  FILE(GLOB __files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+  INSTALL(FILES ${__files}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/otbsvm
     COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
 
