--- a/Utilities/tinyXMLlib/CMakeLists.txt
+++ b/Utilities/tinyXMLlib/CMakeLists.txt
@@ -4,12 +4,19 @@ FILE(GLOB tinyXMLlib_SRCS "*.cpp")
 FILE(GLOB tinyXMLlib_HDRS "*.h")
 ADD_LIBRARY(tinyXML ${tinyXMLlib_SRCS})
 TARGET_LINK_LIBRARIES(tinyXML)
+IF(OTB_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(tinyXML PROPERTIES ${OTB_LIBRARY_PROPERTIES})
+ENDIF(OTB_LIBRARY_PROPERTIES)
 
-INSTALL(TARGETS tinyXML
-RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+IF(NOT OTB_INSTALL_NO_LIBRARIES)
+  INSTALL(TARGETS tinyXML
+    RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
+    LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+    ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_LIBRARIES)
 
-INSTALL(FILES ${tinyXMLlib_HDRS}
-    DESTINATION ${OTB_INSTALL_INCLUDE_DIR}/Utilities/tinyXMLlib
+IF(NOT OTB_INSTALL_NO_DEVELOPMENT)
+  INSTALL(FILES ${tinyXMLlib_HDRS}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/tinyXMLlib
     COMPONENT Development)
+ENDIF(NOT OTB_INSTALL_NO_DEVELOPMENT)
