--- a/Utilities/FLTK/CMakeLists.txt
+++ b/Utilities/FLTK/CMakeLists.txt
@@ -411,7 +411,10 @@ CONFIGURE_FILE("${FLTK_SOURCE_DIR}/fltk-config.in"
 
 # OTB Modifications
 #INSTALL_FILES(/include/FL FILES ${FLTK_HEADER_FILES})
-INSTALL_FILES(/include/otb/Utilities/FLTK/FL FILES ${FLTK_HEADER_FILES})
+#INSTALL_FILES(/include/otb/Utilities/FLTK/FL FILES ${FLTK_HEADER_FILES})
+INSTALL(FILES ${FLTK_HEADER_FILES}
+    DESTINATION ${OTB_INSTALL_INCLUDE_DIR_CM24}/Utilities/FLTK/FL
+    COMPONENT Development)
 
 #INSTALL_FILES(/lib/FLTK-${FLTK_VERSION} FILES "${FLTK_SOURCE_DIR}/CMake/FLTKUse.cmake")
 #INSTALL_FILES(/lib/FLTK-${FLTK_VERSION} FILES "${FLTK_BINARY_DIR}/FLTKBuildSettings.cmake")
