--- a/Utilities/FLTK/png/CMakeLists.txt
+++ b/Utilities/FLTK/png/CMakeLists.txt
@@ -20,9 +20,9 @@ SET(PNG_SRCS
 
 ADD_LIBRARY(fltk_png ${PNG_SRCS})
 INSTALL(TARGETS fltk_png
-        RUNTIME DESTINATION ${OTB_INSTALL_BIN_DIR} COMPONENT RuntimeLibraries
-        LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
-        ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR} COMPONENT Development)
+        RUNTIME DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+        LIBRARY DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
+        ARCHIVE DESTINATION ${OTB_INSTALL_LIB_DIR_CM24} COMPONENT Development)
 
 
 IF(UNIX)
