ENH: Improve set includes paths for install tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,7 +199,7 @@ ELSE(EXISTS "${CMAKE_ROOT}/Modules/FindOpenThreads.cmake")
         INCLUDE(${OTB_SOURCE_DIR}/FindOpenThreads.cmake)
 ENDIF(EXISTS "${CMAKE_ROOT}/Modules/FindOpenThreads.cmake")
 
-SET(OTB_USE_EXTERNAL_OPENTHREADS 1)
+SET(OTB_USE_EXTERNAL_OPENTHREADS 1 CACHE INTERNAL "")
 IF(OPENTHREADS_FOUND)
         INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
         LINK_DIRECTORIES( ${OPENTHREADS_LIBRARY} )
