ENH: Improve OTBConfig.cmake.in and UseOTB.cmake.in files for setting externals libraries dir

--- a/OTBConfig.cmake.in
+++ b/OTBConfig.cmake.in
@@ -13,6 +13,9 @@
 # Option use external ITK.
 SET(OTB_USE_EXTERNAL_ITK "@OTB_USE_EXTERNAL_ITK@")
 
+# Option use external ITK.
+SET(OTB_USE_EXTERNAL_FLTK "@OTB_USE_EXTERNAL_FLTK@")
+
 
 # The OTB source tree.
 SET(OTB_SOURCE_DIR "@OTB_SOURCE_DIR@")
@@ -76,6 +79,7 @@ SET(OTB_VXL_DIR "@OTB_VXL_DIR@")
 
 SET(OTB_FLTK_FLUID_EXECUTABLE "@FLTK_FLUID_EXECUTABLE@")
 SET(OTB_ITK_DIR "@ITK_DIR@")
+SET(OTB_FLTK_DIR "@FLTK_DIR@")
 
 # FLTK informations
 SET(FLTK_FLUID_EXECUTABLE "@OTB_FLTK_FLUID_EXECUTABLE@")
