--- a/UseOTB.cmake.in
+++ b/UseOTB.cmake.in
@@ -67,9 +67,15 @@ IF(OTB_USE_SYSTEM_VXL)
   ENDIF(VXL_FOUND)
 ENDIF(OTB_USE_SYSTEM_VXL)
 
-IF(OTB_USE_EXTERNAL_FLTK)
-  SET(FLTK_FLUID_EXECUTABLE ${OTB_FLTK_FLUID_EXECUTABLE})
-ENDIF(OTB_USE_EXTERNAL_FLTK)
+#WHERE TO FIND FLTK
+IF(OTB_USE_VISU_GUI)
+  IF(OTB_USE_EXTERNAL_FLTK)
+    SET(FLTK_FLUID_EXECUTABLE ${OTB_FLTK_FLUID_EXECUTABLE})
+    INCLUDE(${OTB_FLTK_DIR}/FLTKConfig.cmake)
+    LINK_DIRECTORIES(${FLTK_LIBRARY_DIRS})
+  ENDIF(OTB_USE_EXTERNAL_FLTK)
+ENDIF(OTB_USE_VISU_GUI)
+
 
 #WHERE TO FIND ITK
 IF(OTB_USE_EXTERNAL_ITK)
