--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -923,5 +923,15 @@ SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/Copyright/OTBCopyri
 FILE(READ ${CPACK_PACKAGE_DESCRIPTION_FILE} CPACK_RPM_PACKAGE_DESCRIPTION)
 FILE(READ ${CPACK_PACKAGE_DESCRIPTION_FILE} CPACK_DEBIAN_PACKAGE_DESCRIPTION)
 
+#Find gdal dll files, localized in the GDAL_LIBRARY directory
+GET_FILENAME_COMPONENT(GDAL_LIB_DIR "${GDAL_LIBRARY}" PATH )
+SET(GDAL_LIB_DIR "${GDAL_LIB_DIR}/" )
+INSTALL(DIRECTORY ${GDAL_LIB_DIR} 
+        DESTINATION                 bin      
+        FILES_MATCHING  PATTERN     "*.dll" )
+INSTALL(DIRECTORY ${GDAL_LIB_DIR} 
+        DESTINATION                 lib      
+        FILES_MATCHING  PATTERN     "*.lib" )
+
 INCLUDE(CPack)
 
