ENH: Add IF(Win32 AND NOT UNIX) for .lib and .dll installation commands files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -895,6 +895,10 @@ SET(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${OTB_REQUIRED_LINK_
 # Set up CPack support, to be able to distribute OTB binary packages. It will
 # be particulary useful to distributed prebuilt OTB.
 #
+
+OPTION(OTB_USE_CPACK "Generate installer using CPack" OFF)
+MARK_AS_ADVANCED(OTB_USE_CPACK)
+
 INCLUDE(InstallRequiredSystemLibraries)
 
 SET(CPACK_PACKAGE_NAME "OTB" CACHE STRING "Package name")
@@ -923,6 +927,7 @@ SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/Copyright/OTBCopyri
 FILE(READ ${CPACK_PACKAGE_DESCRIPTION_FILE} CPACK_RPM_PACKAGE_DESCRIPTION)
 FILE(READ ${CPACK_PACKAGE_DESCRIPTION_FILE} CPACK_DEBIAN_PACKAGE_DESCRIPTION)
 
+IF(WIN32 AND NOT UNIX)
 #Find gdal dll files, localized in the GDAL_LIBRARY directory
 GET_FILENAME_COMPONENT(GDAL_LIB_DIR "${GDAL_LIBRARY}" PATH )
 SET(GDAL_LIB_DIR "${GDAL_LIB_DIR}/" )
@@ -932,6 +937,9 @@ INSTALL(DIRECTORY ${GDAL_LIB_DIR}
 INSTALL(DIRECTORY ${GDAL_LIB_DIR} 
         DESTINATION                 lib      
         FILES_MATCHING  PATTERN     "*.lib" )
+ENDIF(WIN32 AND NOT UNIX)
 
 INCLUDE(CPack)
+
+ENDIF(OTB_USE_CPACK)
 
