ENH: Add IF(Win32 AND NOT UNIX) for .lib and .dll installation commands files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -899,6 +899,8 @@ SET(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${OTB_REQUIRED_LINK_
 OPTION(OTB_USE_CPACK "Generate installer using CPack" OFF)
 MARK_AS_ADVANCED(OTB_USE_CPACK)
 
+IF(OTB_USE_CPACK)
+
 INCLUDE(InstallRequiredSystemLibraries)
 
 SET(CPACK_PACKAGE_NAME "OTB" CACHE STRING "Package name")
