BUG: fixing bug in debian package dependancies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ SET(OTB_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
 IF(NOT OTB_NO_LIBRARY_VERSION)
   # This setting of SOVERSION assumes that any API change
   # will increment either the minor or major version number of OTB.
-  SET(OTB_LIBRARY_PROPERTIES 
+  SET(OTB_LIBRARY_PROPERTIES
       VERSION   "${OTB_VERSION_MAJOR}.${OTB_VERSION_MINOR}.${OTB_VERSION_PATCH}"
       SOVERSION "${OTB_VERSION_MAJOR}.${OTB_VERSION_MINOR}"
      )
@@ -919,7 +919,7 @@ MARK_AS_ADVANCED(CPACK_PACKAGE_CONTACT)
 
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Description.txt")
 
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "lib${GDAL_LIBRARY}1-1.5.0 (>= 1.5.1-0), libfltk1.1 (>= 1.1.7-3), libcurl3 (>=7.15.5-1etch1), libfftw3-3 (>=3.1.2-3.1)" CACHE STRING "Debian package dependance" )
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libgdal1-1.5.0 (>= 1.5.1-0), libfltk1.1 (>= 1.1.7-3), libcurl3 (>=7.15.5-1etch1), libfftw3-3 (>=3.1.2-3.1)" CACHE STRING "Debian package dependance" )
 MARK_AS_ADVANCED(CPACK_DEBIAN_PACKAGE_DEPENDS)
 
 SET(CPACK_PACKAGE_INSTALL_DIRECTORY "OrfeoToolbox-${OTB_VERSION_MAJOR}.${OTB_VERSION_MINOR}")
@@ -933,11 +933,11 @@ IF(WIN32 AND NOT UNIX)
 #Find gdal dll files, localized in the GDAL_LIBRARY directory
 GET_FILENAME_COMPONENT(GDAL_LIB_DIR "${GDAL_LIBRARY}" PATH )
 SET(GDAL_LIB_DIR "${GDAL_LIB_DIR}/" )
-INSTALL(DIRECTORY ${GDAL_LIB_DIR} 
-        DESTINATION                 bin      
+INSTALL(DIRECTORY ${GDAL_LIB_DIR}
+        DESTINATION                 bin
         FILES_MATCHING  PATTERN     "*.dll" )
-INSTALL(DIRECTORY ${GDAL_LIB_DIR} 
-        DESTINATION                 lib      
+INSTALL(DIRECTORY ${GDAL_LIB_DIR}
+        DESTINATION                 lib
         FILES_MATCHING  PATTERN     "*.lib" )
 ENDIF(WIN32 AND NOT UNIX)
 
