--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,9 @@ OPTION(OTB_USE_JPEG2000 "Use to support jpeg2000 image file format." ON)
 
 #-----------------------------------------------------------------------------
 
+# Use the liblas library (do not link on solaris)
+OPTION(OTB_USE_LIBLAS "Use liblas library to support Lidar data format." ON)
+MARK_AS_ADVANCED(OTB_USE_LIBLAS)
 
 # FIND EXTERNAL LIBRAIRIES USE
 
@@ -714,32 +717,32 @@ ENDIF(OTB_USE_VISU_GUI)
 # Use OTB_ALGO_UTILITIES_DEPENDENT_LIBRARIES to LINK Utilities Algo libraries into your executable
 # Use OTB_ALLS_UTILITIES_DEPENDENT_LIBRARIES to LINK Utilities Algo libraries into your executable
 # => Create OTB_IO_UTILITIES_DEPENDENT_LIBRARIES
-
-SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES "${GDAL_LIBRARY};dxf;tinyXML;otbliblas;otbossim;otbossimplugins" )
-
-IF(NOT OTB_USE_EXTERNAL_OPENTHREADS)
-        SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES  "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};${OPENTHREADS_LIBRARY}")
-ENDIF(NOT OTB_USE_EXTERNAL_OPENTHREADS)
-
-# Add EXPAT library
-IF( OTB_USE_EXTERNAL_EXPAT )
-        SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES  "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};expat")
-ELSE( OTB_USE_EXTERNAL_EXPAT  )
-        SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES  "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};otbexpat")
-ENDIF( OTB_USE_EXTERNAL_EXPAT )
-
-# Add Open Jpeg library
-IF( OTB_COMPILE_JPEG2000 )
-     SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};otbopenjpeg")
-ENDIF( OTB_COMPILE_JPEG2000 )
-
-# => Create OTB_ALGO_UTILITIES_DEPENDENT_LIBRARIES
-SET(OTB_ALGO_UTILITIES_DEPENDENT_LIBRARIES "otb6S;otbgalib;InsightJournal;otbsvm")
-
-
-# => Create OTB_ALLS_UTILITIES_DEPENDENT_LIBRARIES
-SET(OTB_ALLS_UTILITIES_DEPENDENT_LIBRARIES "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES} ${OTB_ALGO_UTILITIES_DEPENDENT_LIBRARIES}")
-
+# # #
+# # # SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES "${GDAL_LIBRARY};dxf;tinyXML;otbliblas;otbossim;otbossimplugins" )
+# # #
+# # # IF(NOT OTB_USE_EXTERNAL_OPENTHREADS)
+# # #         SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES  "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};${OPENTHREADS_LIBRARY}")
+# # # ENDIF(NOT OTB_USE_EXTERNAL_OPENTHREADS)
+# # #
+# # # # Add EXPAT library
+# # # IF( OTB_USE_EXTERNAL_EXPAT )
+# # #         SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES  "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};expat")
+# # # ELSE( OTB_USE_EXTERNAL_EXPAT  )
+# # #         SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES  "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};otbexpat")
+# # # ENDIF( OTB_USE_EXTERNAL_EXPAT )
+# # #
+# # # # Add Open Jpeg library
+# # # IF( OTB_COMPILE_JPEG2000 )
+# # #      SET(OTB_IO_UTILITIES_DEPENDENT_LIBRARIES "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES};otbopenjpeg")
+# # # ENDIF( OTB_COMPILE_JPEG2000 )
+# # #
+# # # # => Create OTB_ALGO_UTILITIES_DEPENDENT_LIBRARIES
+# # # SET(OTB_ALGO_UTILITIES_DEPENDENT_LIBRARIES "otb6S;otbgalib;InsightJournal;otbsvm")
+# # #
+# # #
+# # # # => Create OTB_ALLS_UTILITIES_DEPENDENT_LIBRARIES
+# # # SET(OTB_ALLS_UTILITIES_DEPENDENT_LIBRARIES "${OTB_IO_UTILITIES_DEPENDENT_LIBRARIES} ${OTB_ALGO_UTILITIES_DEPENDENT_LIBRARIES}")
+# # #
 
 #-----------------------------------------------------------------------------
 OPTION(BUILD_EXAMPLES "Build the Examples directory." OFF)
