--- a/Code/IO/CMakeLists.txt
+++ b/Code/IO/CMakeLists.txt
@@ -27,7 +27,10 @@ ENDIF(OTB_COMPILE_JPEG2000)
 
 
 ADD_LIBRARY(OTBIO ${OTBIO_SRCS})
-TARGET_LINK_LIBRARIES (OTBIO OTBCommon ${GDAL_LIBRARY} ${OGR_LIBRARY} otbossim otbossimplugins ITKIO ITKCommon dxf otbkml otbliblas)
+TARGET_LINK_LIBRARIES (OTBIO OTBCommon ${GDAL_LIBRARY} ${OGR_LIBRARY} otbossim otbossimplugins ITKIO ITKCommon dxf otbkml)
+IF (OTB_USE_LIBLAS)
+    TARGET_LINK_LIBRARIES(OTBIO otbliblas)
+ENDIF(OTB_USE_LIBLAS)
 IF( OTB_COMPILE_JPEG2000 )
     TARGET_LINK_LIBRARIES (OTBIO otbopenjpeg)
 ENDIF( OTB_COMPILE_JPEG2000 )
