ENH: added Tv for rectangle matching

--- a/Testing/Code/FeatureExtraction/CMakeLists.txt
+++ b/Testing/Code/FeatureExtraction/CMakeLists.txt
@@ -1724,6 +1724,16 @@ ADD_TEST(raTvUrbanAreaDetectionImageFilter ${FEATUREEXTRACTION_TESTS14}
 ADD_TEST(feTuRegionImageToRectangularPathListFilterNew ${FEATUREEXTRACTION_TESTS14}
          otbRegionImageToRectangularPathListFilterNew)
 
+ADD_TEST(feTvRegionImageToRectangularPathListFilter ${FEATUREEXTRACTION_TESTS14}
+   --compare-ascii ${EPS}     ${BASELINE_FILES}/feRectangle.txt
+                        ${TEMP}/feRectangle.txt
+        otbRegionImageToRectangularPathListFilter
+	${INPUTDATA}/rectangle.png
+	${TEMP}/feRectangle.txt
+        0.9 #fit score
+	10)  #minimum size
+
+
 # A enrichir
 SET(BasicFeatureExtraction_SRCS1
 otbAlignImageToPath.cxx
@@ -1880,6 +1890,7 @@ otbSFSTexturesImageFilterTest.cxx
 otbUrbanAreaDetectionImageFilterNew.cxx
 otbUrbanAreaDetectionImageFilter.cxx
 otbRegionImageToRectangularPathListFilterNew.cxx
+otbRegionImageToRectangularPathListFilter.cxx
 )
 
 
