ENH : add existing but not compiled test

--- a/Testing/Code/Common/CMakeLists.txt
+++ b/Testing/Code/Common/CMakeLists.txt
@@ -440,7 +440,12 @@ ADD_TEST(coTvPolygon ${COMMON_TESTS6}
 
 #-------- otb::PolyLineImageIterator -----------------------------------------
 
- ADD_TEST(coTvPolyLineImageIterator ${COMMON_TESTS6}
+ ADD_TEST(coTuPolyLineImageConstIteratorNew ${COMMON_TESTS6}
+         otbPolyLineImageConstIteratorNew
+	        ${INPUTDATA}/poupees_sub_c1.png
+)
+
+ADD_TEST(coTvPolyLineImageIterator ${COMMON_TESTS6}
 --compare-image ${TOL}
 		${BASELINE}/coTvPolyLineImageIterator.png
 		${TEMP}/coTvPolyLineImageIterator.png
@@ -744,6 +749,7 @@ otbArcSpatialObjectNew.cxx
 otbPathListToPathListFilterNew.cxx
 )
 SET(BasicCommon_SRCS6
+otbPolyLineImageConstIteratorNew.cxx
 otbPolyLineImageIterator.cxx
 otbDrawPathFilterNew.cxx
 otbDrawPathFilter.cxx
